--- a/app/src/main/res/layout/exercise_1.xml
+++ b/app/src/main/res/layout/exercise_1.xml
@@ -11,12 +11,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:contentDescription="@string/avatar"
+        android:src="@drawable/ic_icon_star"
         tools:src="@tools:sample/avatars" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
+        android:text="PETER"
         tools:text="PETER " />
 
     <TextView
@@ -24,6 +26,7 @@
         android:layout_height="wrap_content"
         android:gravity="end"
         android:layout_weight="1"
+        android:text="2000 Points "
         tools:text="2000 Points " />
 
 </LinearLayout>
